# git-ssh-sync

./: .gitignore  AGENTS.md  CLAUDE.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: manual-testing.md  spec.md  troubleshooting.md
manual_tests/: test_manual_e2e.py
src/git_ssh_sync/: __init__.py  attach.py  branch.py  cli.py  clone.py  config.py  console.py  dev.py  doctor.py  errors.py  git.py  logging_config.py  ssh.py  status.py  sync.py  windows_git_ssh.py
tests/: conftest.py  test_attach.py  test_branch.py  test_cli.py  test_clone.py  test_config.py  test_dev.py  test_doctor.py  test_git.py  test_logging_config.py  test_ssh.py  test_status.py  test_sync.py  test_windows_git_ssh.py
