[project]
name = "git-ssh-sync"
version = "0.4.0"
description = "Sync Git commits through a local machine for development environments without direct GitHub or GitLab access."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
git-ssh-sync = "git_ssh_sync.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.18",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
